# registrar_monitor

./: .coverage  .gitignore  DATABASE.md  GEMINI.md  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  schedule.txt  settings.toml
data/: enrollment.db  enrollment_fall_2024.db  enrollment_spring_2024.db  enrollment_summer_2025.db  fall_2025_2025-08-04_22-58-51.json  fall_2025_2025-08-04_23-01-15.json  fall_2025_2025-08-04_23-02-23.json  fall_2025_2025-08-04_23-07-34.json  fall_2025_2025-08-05_13-02-15.json  fall_2025_2025-08-05_13-02-58.json  fall_2025_2025-08-05_13-06-14.json  fall_2025_2025-08-05_13-10-10.json  fall_2025_2025-08-05_14-10-21.json  fall_2025_2025-08-05_14-11-12.json  fall_2025_2025-08-05_14-14-33.json  fall_2025_2025-08-05_14-14-53.json  fall_2025_2025-08-05_14-15-13.json  fall_2025_2025-08-05_14-15-33.json  fall_2025_2025-08-05_14-15-52.json  fall_2025_2025-08-05_14-20-37.json  fall_2025_2025-08-05_14-25-39.json  fall_2025_2025-08-05_15-48-43.json  fall_2025_2025-08-05_17-36-23.json  fall_2025_2025-08-05_17-45-51.json  fall_2025_2025-08-05_22-00-01.json  fall_2025_2025-08-05_22-05-26.json  fall_2025_2025-08-05_23-44-58.json  fall_2025_2025-08-05_23-51-21.json  fall_2025_2025-08-05_23-54-39.json  fall_2025_2025-08-06_08-38-36.json  fall_2025_2025-08-06_08-58-49.json  fall_2025_2025-08-06_09-03-48.json  fall_2025_2025-08-06_09-04-48.json  fall_2025_2025-08-06_09-06-33.json  fall_2025_2025-08-06_09-08-43.json  fall_2025_2025-08-06_09-10-53.json  fall_2025_2025-08-06_09-13-03.json  fall_2025_2025-08-06_09-15-12.json  fall_2025_2025-08-06_09-17-22.json  fall_2025_2025-08-06_09-19-32.json  (+1023 more)
scripts/: benchmark_downloader.py  benchmark_is_filled.py  generate_prototype.py  generate_website.py  manage_database.py  populate_instructors.py  (+2 more)
(+1175 files in other folders)
